--- a/packages/flutterfire_gen/pubspec_overrides.yaml
+++ b/packages/flutterfire_gen/pubspec_overrides.yaml
@@ -7,7 +7,8 @@ dependency_overrides:
 
   # pub downgrade:
   # flutterfire_gen generated codes includes sealed class feature to be formatted
-  dart_style: ^2.3.0
+  dart_style: ^3.0.0
+  test_api: ^0.7.6
   # build_runner 2.2.0 => glob 2.0.0 => file 6.0.0
   # flutterfire_gen requires file: ^6.1.3
   file: ^6.1.3
