--- a/packages/flutterfire_gen/pubspec.yaml
+++ b/packages/flutterfire_gen/pubspec.yaml
@@ -12,8 +12,15 @@ dependencies:
   cloud_firestore: ^6.0.2
   flutter:
     sdk: flutter
-  flutterfire_gen_annotation: ^0.4.1
-  flutterfire_gen_utils: ^0.5.0
+  flutterfire_gen_annotation:
+    git:
+      url: https://github.com/geovaniprodata/flutterfire_gen.git
+      path: packages/flutterfire_gen_annotation
+  
+  flutterfire_gen_utils:
+    git:
+      url: https://github.com/geovaniprodata/flutterfire_gen.git
+      path: packages/flutterfire_gen_utils
   json_annotation: ^4.9.0
   meta: ^1.16.0
   path: ^1.9.1
