--- a/packages/flutterfire_gen/example/pubspec_overrides.yaml
+++ b/packages/flutterfire_gen/example/pubspec_overrides.yaml
@@ -1,5 +1,7 @@
 # melos_managed_dependency_overrides: flutterfire_gen,flutterfire_gen_annotation,flutterfire_gen_utils
 dependency_overrides:
+  test_api: ^0.7.6
+
   flutterfire_gen:
     path: ..
   flutterfire_gen_annotation:
