--- a/packages/flutterfire_gen/pubspec.yaml
+++ b/packages/flutterfire_gen/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  analyzer: ">=6.11.0 <8.2.0"
-  build: ^3.1.0
+  analyzer: ^8.2.0
+  build: ^4.0.0
   cloud_firestore: ^6.0.2
   flutter:
     sdk: flutter
@@ -24,7 +24,7 @@ dependencies:
   json_annotation: ^4.9.0
   meta: ^1.16.0
   path: ^1.9.1
-  source_gen: ^3.1.0
+  source_gen: ^4.0.0
 
 dev_dependencies:
   build_runner: ^2.7.1
