--- a/packages/flutterfire_gen/pubspec.yaml
+++ b/packages/flutterfire_gen/pubspec.yaml
@@ -1,6 +1,7 @@
 name: flutterfire_gen
 description: flutterfire_gen is a package for automatic code generation for Cloud Firestore. It supports efficient CRUD operations with type-safe interfaces and methods.
 version: 0.5.0
+publish_to: none
 homepage: https://github.com/kosukesaigusa/flutterfire_gen
 
 environment:
@@ -8,7 +9,7 @@ environment:
 
 dependencies:
   analyzer: ^8.2.0
-  build: ^4.0.0
+  build: ^3.1.0
   cloud_firestore: ^6.0.2
   flutter:
     sdk: flutter
@@ -24,7 +25,7 @@ dependencies:
   json_annotation: ^4.9.0
   meta: ^1.16.0
   path: ^1.9.1
-  source_gen: ^4.0.0
+  source_gen: ^3.1.0
 
 dev_dependencies:
   build_runner: ^2.7.1
